# ShieldFlow

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
examples/: .env.example  README.md  crewai_guarded_agent.py  crewai_integration.py  demo_pipeline.py  flink_detection_stream.sql  flink_sql_example.sql  langchain_guarded_agent.py  langchain_integration.py
shieldflow/: __init__.py  datadog.py  detectors.py  event_bus.py  inspector.py  trust.py
shieldflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shieldflow/integrations/: crewai_middleware.py  langchain_callback.py
tests/: test_crewai_agent_real.py  test_crewai_middleware.py  test_detectors.py  test_kafka_flink_integration.py  test_langchain_callback.py  test_stack.py  test_streaming_integration.py
